[gd_scene load_steps=3 format=2]

[ext_resource path="res://data/editor/scripts/editorNode.gd" type="Script" id=1]
[ext_resource path="res://data/editor/graphics/add.png" type="Texture" id=2]

[node name="Panel" type="Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
mouse_filter = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Edit" type="TextEdit" parent="Label"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
wrap_enabled = true

[node name="add" type="Button" parent="."]
visible = false
margin_left = 112.718
margin_top = 15.2269
margin_right = 188.718
margin_bottom = 85.2269
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="advanced" type="Control" parent="."]
visible = false
margin_left = 300.0
margin_right = 340.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next" type="CheckBox" parent="advanced"]
margin_top = 14.0
margin_right = 56.0
margin_bottom = 38.0
text = "next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="CheckBox" parent="advanced"]
margin_right = 52.0
margin_bottom = 24.0
text = "exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="progress" type="CheckBox" parent="advanced"]
margin_top = 28.0
margin_right = 83.0
margin_bottom = 52.0
text = "progress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="var" type="CheckBox" parent="advanced"]
margin_top = 42.0
margin_right = 47.0
margin_bottom = 66.0
text = "var"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="event" type="CheckBox" parent="advanced"]
margin_top = 56.0
margin_right = 64.0
margin_bottom = 80.0
text = "event"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cutscene" type="CheckBox" parent="advanced"]
margin_top = 70.0
margin_right = 86.0
margin_bottom = 94.0
text = "cutscene"

[connection signal="gui_input" from="Label" to="." method="_on_Label_gui_input"]
[connection signal="mouse_entered" from="Label" to="." method="_on_Label_mouse_entered"]
[connection signal="mouse_exited" from="Label" to="." method="_on_Label_mouse_exited"]
[connection signal="gui_input" from="Label/Edit" to="." method="_on_Edit_gui_input"]
[connection signal="pressed" from="add" to="." method="_on_add_pressed"]
